Preenchimento do "Sobre" e"Educação"

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Sou Vitor, um estudante de programação de 19 anos que tem aprimorado minhas habilidades há pouco mais de um ano. Durante esse tempo, concentrei meus estudos em JavaScript e Angular, adquirindo experiência em projetos pessoais e profissionais. Sou uma pessoa dedicada e comprometida, com uma forte paixão pela programação e o desejo de me desenvolver cada vez mais.</p>
           </div>
 
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <!-- <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
@@ -108,7 +108,7 @@
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
               <p>TODO</p>
             </div>
-          </div>
+          </div> -->
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
@@ -123,17 +123,17 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/E59FFB7C" target="_blank">Construindo uma Pokédex com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/4237F498" target="_blank">TypeScript para Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/B81F51DF" target="_blank">Trabalhando com Componentes Angular</a></li>
               </ul>
               <hr>
             </div>
-            <div class="w3-container">
+            <!--<div class="w3-container">
               <h5 class="w3-opacity"><b>TODO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
               <p>TODO</p>
-            </div>
+            </div>-->
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
