--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </div>
               <p>Python</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">60%</div>
               </div>
               <p>UI/UX</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>Sou Vitor, um estudante de programação de 19 anos que tem aprimorado minhas habilidades há pouco mais de um ano. Durante esse tempo, concentrei meus estudos em JavaScript e Angular, adquirindo experiência em projetos pessoais e profissionais. Sou uma pessoa dedicada e comprometida, com uma forte paixão pela programação e o desejo de me desenvolver cada vez mais.</p>
+            <p>Meu nome é Vitor, sou um estudante de programação de 19 anos e venho aprimorando minhas habilidades há pouco mais de um ano. Durante esse tempo, concentrei meus estudos em JavaScript e Angular, adquirindo experiência em projetos pessoais e profissionais. Sou uma pessoa dedicada e comprometida, com uma forte paixão pela programação e o desejo de me desenvolver cada vez mais.</p>
           </div>
 
           <!-- <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -124,8 +124,8 @@
               </p>
               <ul>
                 <li><a href="https://www.dio.me/certificate/E59FFB7C" target="_blank">Construindo uma Pokédex com JavaScript</a></li>
-                <li><a href="https://www.dio.me/certificate/4237F498" target="_blank">TypeScript para Angular</a></li>
-                <li><a href="https://www.dio.me/certificate/B81F51DF" target="_blank">Trabalhando com Componentes Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/9050D0A8" target="_blank">Criando um Blog com Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/F9A28CA0" target="_blank">Criando um Clone de BuzzFeed com Angular</a></li>
               </ul>
               <hr>
             </div>
@@ -143,17 +143,17 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/vitorcodeArt/angular-blog" target="_blank">vitorcodeArt/angular-blog</a>
               </h6>
-              <p>TODO</p>
+              <p>Projeto de criação de Blog com o framework do Angular e utilizando TypeScript como Linguagem</p>
               <hr>
             </div>
             <div class="w3-container">
               <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/vitorcodeArt/Main-Pokedex-Js" target="_blank">vitorcodeArt/Main-Pokedex-Js</a>
               </h6>
-              <p>TODO</p>
+              <p>Aplicação Web de Pokedex que faz requisições à PokeApi e fornece dados sobre os Pokémons, como nome, tipo, habilidades, estatisticas, entre outros.</p>
             </div>
           </div>
   
@@ -168,11 +168,9 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://github.com/vitorcodeArt" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/vitor-moraes-690713248/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://instagram.com/vitor_menezes.art?igshid=NGExMml2YTkyZg==" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
