Adicionando experiencias de trabalho

--- a/index.html
+++ b/index.html
@@ -93,22 +93,17 @@
             <p>Meu nome é Vitor, sou um estudante de programação de 19 anos e venho aprimorando minhas habilidades há pouco mais de um ano. Durante esse tempo, concentrei meus estudos em JavaScript e Angular, adquirindo experiência em projetos pessoais e profissionais. Sou uma pessoa dedicada e comprometida, com uma forte paixão pela programação e o desejo de me desenvolver cada vez mais.</p>
           </div>
 
-          <!-- <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
-              <hr>
+              <h5 class="w3-opacity"><b>God Lion - Localtec</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h2>experiência em Automação de processos com Python</h2>
+              <p>Sou um profissional com experiência comprovada na criação e implementação de automações em Python para otimizar processos e serviços em minha empresa atual. Minhas contribuições têm permitido a substituição de tarefas manuais demoradas por soluções automatizadas, resultando em aumento da eficiência operacional e resução de erros.</p>
             </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
-            </div>
-          </div> -->
+          </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
