--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>God Lion - Localtec</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <h2>experiência em Automação de processos com Python</h2>
+              <h2 class="w3-opacity">experiência em Automação de processos com Python</h2>
               <p>Sou um profissional com experiência comprovada na criação e implementação de automações em Python para otimizar processos e serviços em minha empresa atual. Minhas contribuições têm permitido a substituição de tarefas manuais demoradas por soluções automatizadas, resultando em aumento da eficiência operacional e resução de erros.</p>
             </div>
           </div>
