--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>Meu nome é Vitor, sou um estudante de programação de 19 anos e venho aprimorando minhas habilidades há pouco mais de um ano. Durante esse tempo, concentrei meus estudos em JavaScript e Angular, adquirindo experiência em projetos pessoais e profissionais. Sou uma pessoa dedicada e comprometida, com uma forte paixão pela programação e o desejo de me desenvolver cada vez mais.</p>
+            <p>Meu nome é Vitor, sou um estudante de programação de 19 anos e venho aprimorando minhas habilidades há pouco mais de um ano. Durante esse tempo, concentrei meus estudos em JavaScript e Angular, adquirindo experiência tanto em projetos pessoais como projetos profissionais. Sou uma pessoa dedicada e comprometida, com o desejo de me desenvolver cada dia mais.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -101,7 +101,7 @@
               <h5 class="w3-opacity"><b>God Lion - Localtec</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <h6 class="w3-opacity"><b>Experiência em Automação de processos com Python</b></h6>
-              <p>Sou um profissional com experiência comprovada na criação e implementação de automações em Python para otimizar processos e serviços em minha empresa atual. Minhas contribuições têm permitido a substituição de tarefas manuais demoradas por soluções automatizadas, resultando em aumento da eficiência operacional e resução de erros.</p>
+              <p>Sou um profissional com experiência comprovada na criação e implementação de automações em Python para otimizar processos e serviços em minha atual empresa. Minhas contribuições têm permitido a substituição de tarefas manuais demoradas por soluções automatizadas, resultando em aumento da eficiência operacional e redução de erros.</p>
             </div>
           </div>
   
@@ -120,7 +120,7 @@
               <ul>
                 <li><a href="https://www.dio.me/certificate/E59FFB7C" target="_blank">Construindo uma Pokédex com JavaScript</a></li>
                 <li><a href="https://www.dio.me/certificate/9050D0A8" target="_blank">Criando um Blog com Angular</a></li>
-                <li><a href="https://www.dio.me/certificate/F9A28CA0" target="_blank">Criando um Clone de BuzzFeed com Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/3930A95F" target="_blank">Conclusão do Bootcamp "Potência Tech Angular Developer - Powered by iFood"</a></li>
               </ul>
               <hr>
             </div>
@@ -140,7 +140,7 @@
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/vitorcodeArt/angular-blog" target="_blank">vitorcodeArt/angular-blog</a>
               </h6>
-              <p>Projeto de criação de Blog com o framework do Angular e utilizando TypeScript como Linguagem</p>
+              <p>Projeto de criação de Blog com o framework Angular e utilizando TypeScript como Linguagem</p>
               <hr>
             </div>
             <div class="w3-container">
@@ -148,7 +148,7 @@
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/vitorcodeArt/Main-Pokedex-Js" target="_blank">vitorcodeArt/Main-Pokedex-Js</a>
               </h6>
-              <p>Aplicação Web de Pokedex que faz requisições à PokeApi e fornece dados sobre os Pokémons, como nome, tipo, habilidades, estatisticas, entre outros.</p>
+              <p>Aplicação Web da criação de uma Pokedéx que faz requisições à PokeApi fornecendo dados dos Pokémons, como o nome, o tipo, as habilidades, estatisticas, etc.</p>
             </div>
           </div>
   
