--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
       html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
@@ -148,7 +149,7 @@
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/vitorcodeArt/Main-Pokedex-Js" target="_blank">vitorcodeArt/Main-Pokedex-Js</a>
               </h6>
-              <p>Aplicação Web da criação de uma Pokedéx que faz requisições à PokeApi fornecendo dados dos Pokémons, como o nome, o tipo, as habilidades, estatisticas, etc.</p>
+              <p>Aplicação Web da criação de uma Pokedéx que faz requisições à PokeApi fornecendo dados dos Pokémons, como o nome, o tipo, as habilidades, estatisticas, entre outros atributos.</p>
             </div>
           </div>
   
@@ -166,7 +167,6 @@
       <a href="https://github.com/vitorcodeArt" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/vitor-moraes-690713248/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <a href="https://instagram.com/vitor_menezes.art?igshid=NGExMml2YTkyZg==" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
   </body>
